<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtEncargaPizzaOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/encarga_tu_pizza_online"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

    <EditText
        android:id="@+id/edtNombrePizza"
        android:layout_width="212dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/nombre_pizza"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEncargaPizzaOnline" />

    <EditText
        android:id="@+id/edtCantidad"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cantidad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edtNombrePizza"
        app:layout_constraintTop_toBottomOf="@+id/txtEncargaPizzaOnline" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:onClick="Siguiente"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCantidad" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="188dp"
        android:layout_height="167dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza"
        android:contentDescription="@string/imagen" />
</androidx.constraintlayout.widget.ConstraintLayout>